--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/image/cherry_myo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cherry Myo Restaurant QR base Ordering System</title>
+    <title>Cherry Myo Restaurant</title>
   </head>
   <body>
     <div id="root"></div>
